--- a/start/src/main/resources/application.properties
+++ b/start/src/main/resources/application.properties
@@ -1,6 +1,40 @@
 project.name=start
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://47.98.48.96:3306/test
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=abc123456
+
+
+# ??????
+dubbo.scan.basePackages  = com.alibaba.demo
+# Dubbo Config properties
+## ApplicationConfig Bean
+dubbo.application.id = demo-service
+dubbo.application.name = demo-service
+
+## ProtocolConfig Bean
+dubbo.protocol.id = dubbo
+dubbo.protocol.name = dubbo
+dubbo.protocol.port = 20880
+
+## RegistryConfig Bean
+dubbo.registry.id = dubbo-redis
+# ???zk?????
+dubbo.registry.address = redis://127.0.0.1:6379
+
+
+
+spring.redis.host=127.0.0.1
+#Redis???????
+spring.redis.port=6379
+#Redis?????????????
+spring.redis.password=
+#????????????????????
+spring.redis.jedis.pool.max-idle=8
+#???????????????????????
+spring.redis.jedis.pool.max-wait=
+#???????????
+spring.redis.jedis.pool.min-idle=0
+#??????????
+spring.redis.timeout=30000
