--- a/start/src/main/resources/application.properties
+++ b/start/src/main/resources/application.properties
@@ -6,7 +6,6 @@ spring.datasource.username=root
 spring.datasource.password=abc123456
 
 
-# ??????
 dubbo.scan.basePackages  = com.alibaba.demo
 # Dubbo Config properties
 ## ApplicationConfig Bean
@@ -20,21 +19,14 @@ dubbo.protocol.port = 20880
 
 ## RegistryConfig Bean
 dubbo.registry.id = dubbo-redis
-# ???zk?????
-dubbo.registry.address = redis://127.0.0.1:6379
+dubbo.registry.address = redis://netbyg.qicp.vip:6379
 
 
 
-spring.redis.host=127.0.0.1
-#Redis???????
+spring.redis.host=netbyg.qicp.vip
 spring.redis.port=6379
-#Redis?????????????
-spring.redis.password=
-#????????????????????
+spring.redis.password=abc123456
 spring.redis.jedis.pool.max-idle=8
-#???????????????????????
 spring.redis.jedis.pool.max-wait=
-#???????????
 spring.redis.jedis.pool.min-idle=0
-#??????????
 spring.redis.timeout=30000
