byg:update config

--- a/start/src/main/resources/application.properties
+++ b/start/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 project.name=start
 
+server.port=8080
+
+logging.file=/data/logs/demo-service/
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://47.98.48.96:3306/test
 spring.datasource.username=root
@@ -19,11 +23,11 @@ dubbo.protocol.port = 20880
 
 ## RegistryConfig Bean
 dubbo.registry.id = dubbo-redis
-dubbo.registry.address = redis://netbyg.qicp.vip:6379
+dubbo.registry.address = redis://192.168.0.200:6379
 
 
 
-spring.redis.host=netbyg.qicp.vip
+spring.redis.host=192.168.0.200
 spring.redis.port=6379
 spring.redis.password=abc123456
 spring.redis.jedis.pool.max-idle=8
