--- a/demo-service-app/pom.xml
+++ b/demo-service-app/pom.xml
@@ -39,6 +39,13 @@
             <artifactId>javax.el</artifactId>
         </dependency>
         <!-- JSR 303 Validation End-->
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.6.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
