--- a/start/pom.xml
+++ b/start/pom.xml
@@ -35,6 +35,10 @@
             <groupId>com.alibaba.spring.boot</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <!-- zookeeper客户端 -->
         <dependency>
             <groupId>com.101tec</groupId>
