--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <mybatis-starter.version>1.3.1</mybatis-starter.version>
-        <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
+        <mybatis-starter.version>2.1.4</mybatis-starter.version>
+        <spring-boot.version>2.3.0.RELEASE</spring-boot.version>
         <cola.components.version>4.0.1</cola.components.version>
+
     </properties>
 
     <modules>
@@ -29,6 +30,13 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <!--cola components-->
             <dependency>
                 <groupId>com.alibaba.cola</groupId>
@@ -84,7 +92,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
-                <version>2.1.3.RELEASE</version>
+                <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
@@ -106,6 +114,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>${spring-boot.version}</version>
             </dependency>
             <!--Spring Boot End-->
             <!--guawa工具类-->
@@ -163,13 +172,26 @@
                 <artifactId>fastjson</artifactId>
                 <version>1.2.55</version>
             </dependency>
+            <!-- Misc End -->
+
+            <dependency>
+                <groupId>org.apache.shardingsphere</groupId>
+                <artifactId>shardingsphere-jdbc-core-spring-boot-starter</artifactId>
+                <version>5.1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>1.1.22</version>
+            </dependency>
+
+
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.13.1</version>
                 <scope>test</scope>
             </dependency>
-            <!-- Misc End -->
         </dependencies>
     </dependencyManagement>
 
