--- a/start/src/main/resources/application.properties
+++ b/start/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-project.name=start
+project.name=demo-service
 
 server.port=8080
 
 logging.file=/data/logs/demo-service/
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.98.48.96:3306/test
+spring.datasource.url=jdbc:mysql://ibyg.net:3306/test
 spring.datasource.username=root
 spring.datasource.password=abc123456
 
@@ -23,11 +23,10 @@ dubbo.protocol.port = 20880
 
 ## RegistryConfig Bean
 dubbo.registry.id = dubbo-redis
-dubbo.registry.address = redis://192.168.0.200:6379
+dubbo.registry.address = redis://ibyg.net:6379
 
-
-
-spring.redis.host=192.168.0.200
+## redis Config
+spring.redis.host=ibyg.net
 spring.redis.port=6379
 spring.redis.password=abc123456
 spring.redis.jedis.pool.max-idle=8
