--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
-                <version>2.6.9</version>
+                <version>2.6.7</version>
             </dependency>
             <!-- 整合dubbo -->
             <dependency>
@@ -132,9 +132,14 @@
             </dependency>
             <!-- zookeeper客户端 -->
             <dependency>
+                <groupId>org.apache.zookeeper</groupId>
+                <artifactId>zookeeper</artifactId>
+                <version>3.7.0</version>
+            </dependency>
+            <dependency>
                 <groupId>com.101tec</groupId>
                 <artifactId>zkclient</artifactId>
-                <version>0.7</version>
+                <version>0.9</version>
             </dependency>
             <!--Validation API-->
             <dependency>
