--- a/pom.xml
+++ b/pom.xml
@@ -103,13 +103,18 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
-                <version>2.6.7</version>
+                <version>2.6.9</version>
             </dependency>
             <!-- 整合dubbo -->
             <dependency>
                 <groupId>com.alibaba.spring.boot</groupId>
                 <artifactId>dubbo-spring-boot-starter</artifactId>
                 <version>2.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.spring</groupId>
+                <artifactId>spring-context-support</artifactId>
+                <version>1.0.2</version>
             </dependency>
             <!-- springboot整合redis -->
             <dependency>
@@ -122,6 +127,11 @@
                 <groupId>com.alibaba.boot</groupId>
                 <artifactId>nacos-config-spring-boot-starter</artifactId>
                 <version>${nacos-config-spring-boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>dubbo-registry-nacos</artifactId>
+                <version>2.6.9</version>
             </dependency>
             <!--Spring Boot End-->
             <!--guawa工具类-->
@@ -139,7 +149,7 @@
             <dependency>
                 <groupId>com.101tec</groupId>
                 <artifactId>zkclient</artifactId>
-                <version>0.9</version>
+                <version>0.11</version>
             </dependency>
             <!--Validation API-->
             <dependency>
