--- a/start/src/main/resources/application.yaml
+++ b/start/src/main/resources/application.yaml
@@ -3,30 +3,13 @@ project:
 server:
   port: 8000
 
-#spring:
-#  datasource:
-#    druid:
-#      driver-class-name: com.mysql.cj.jdbc.Driver
-#      password: abc123456
-#      url: jdbc:mysql://ibyg.net:3306/test
-#      username: root
-#  redis:
-#    host: ibyg.net
-#    jedis:
-#      pool:
-#        max-idle: 8
-#        max-wait: ''
-#        min-idle: 0
-#    password: abc123456
-#    port: 6379
-#    timeout: 30000
 
 nacos:
   config:
     server-addr: netbyg.qicp.vip:80 # 主配置服务器地址
     group: DEFAULT_GROUP # 主配置 group-id  这里约定环境参数
     namespace: dev # 主配置
-    data-id: config.properties  # 主配置 data-id
+    data-id: config.yaml  # 主配置 data-id
     type: yaml # 主配置 配置文件类型
     remote-first: true  # true 代表nacos配置中心的配置优先级高 否则本地配置优先级高 默认false
     max-retry: 2 # 主配置 最大重试次数
@@ -37,23 +20,6 @@ nacos:
     bootstrap:
       enable: true #开启配置预加载功能
       log-enable: true
-
-#dubbo:
-#  application:
-#    name: demo-service
-#  protocol:
-#    name: dubbo
-#    port: 20880
-#    serialization: hessian2
-#  registry:
-#    address: zookeeper://ibyg.net:2181
-##    address: nacos://netbyg.qicp.vip:80
-#    timeout: 2000
-#  scan:
-#    basePackages: com.alibaba.demo
-#  consumer:
-#    timeout: 2000
-#    check: false
 
 logging:
   file:
