--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,13 @@
                 <artifactId>zkclient</artifactId>
                 <version>0.11</version>
             </dependency>
+            <!--rocketmq-->
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-spring-boot-starter</artifactId>
+                <version>2.0.1</version>
+            </dependency>
+
             <!--Validation API-->
             <dependency>
                 <groupId>javax.validation</groupId>
