--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>netby-service-domain</module>
         <module>netby-service-infrastructure</module>
         <module>start</module>
+        <module>netby-service-common</module>
     </modules>
 
     <dependencyManagement>
