--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,11 @@
                 <artifactId>fastjson</artifactId>
                 <version>1.2.55</version>
             </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.5</version>
+            </dependency>
             <!-- Misc End -->
 
             <dependency>
